--- a/static/style.css
+++ b/static/style.css
@@ -10,6 +10,7 @@ h1 {
 
 p {
     margin-bottom: 10px;
+    font-size: 16px;
 }
 
 label {
@@ -47,4 +48,14 @@ form {
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 4px;
+}
+
+.article {
+    background-color: #f9f9f9;
+    align-content: center; /* Change the background color for the article div */
+    padding: 15px;
+    border-radius: 4px;
+    line-height: 1.5;
+    font-size: 26px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
