--- a/templates/conclusion.html
+++ b/templates/conclusion.html
@@ -6,10 +6,15 @@
     </head>
     <h1>News Analysis Result</h1>
     <body>
-        <p>The provided news article is {{ conclusion }}</p>
+        <h2>The provided news article is {{ conclusion }}</h2>
         <br>
-        <p>
-            {{ union }}
-        </p>
+        <h3>
+            Real News Article
+        </h3>
+        <div class = article>
+            <p>
+                {{ union }}
+            </p>
+        </div>
     </body>
 </html>
